--- a/app/src/main/res/layout/rv_one_item.xml
+++ b/app/src/main/res/layout/rv_one_item.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         >
 
         <ImageView
@@ -55,7 +56,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/tail"
-            android:layout_marginTop="25dp"
             android:layout_marginRight="15dp"
             android:id="@+id/iv_tail_item"
             />
@@ -64,19 +64,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="117dp"
         android:orientation="vertical"
         android:background="@mipmap/tail_bg"
         android:layout_marginBottom="10dp"
-        android:visibility="gone"
         android:id="@+id/ll_tail"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
         >
         
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
+            android:layout_marginTop="5dp"
             >
 
             <ImageView
@@ -117,7 +120,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="57dp"
             android:orientation="horizontal"
             android:gravity="center_vertical"
             >
