--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -106,15 +107,49 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@mipmap/bottom_play"
+
+        <FrameLayout
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="70dp"
-            android:id="@+id/iv_play"
-            />
+            >
+
+            <com.edu.feicui.starskymusic.view.CircularSeekBar
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                app:circle_x_radius="18dp"
+                app:circle_y_radius="18dp"
+                app:use_custom_radii="true"
+                app:progress="25"
+                app:max="100"
+                app:pointer_alpha_ontouch="100"
+                app:pointer_color="#ffffff"
+                app:pointer_halo_color="#2fffffff"
+                app:circle_color="#5e6e74"
+                app:circle_progress_color="#fff"
+                app:pointer_halo_width="1.5dp"
+                app:pointer_radius="3dp"
+                app:circle_stroke_width="1dp"
+                app:pointer_halo_border_width="0dp"
+                android:scaleX="1.2"
+                android:scaleY="1.2"
+                android:layout_gravity="center"
+                android:id="@+id/seek_bar"
+                />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/play3"
+                android:layout_gravity="center"
+                android:id="@+id/iv_play"
+                />
+
+
+
+        </FrameLayout>
 
         <ImageView
             android:layout_width="30dp"
