--- a/app/src/main/res/layout/rv_one_item.xml
+++ b/app/src/main/res/layout/rv_one_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:id="@+id/ll_list_item"
         >
 
         <ImageView
@@ -19,7 +20,7 @@
             android:id="@+id/iv_check_item"
             android:layout_marginLeft="15dp"
             android:visibility="gone"
-            android:src="@drawable/selector_check"
+            android:src="@drawable/check"
             />
 
         <LinearLayout
