--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,29 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
+              android:orientation="vertical"
     >
 
-    <com.edu.feicui.starskymusic.view.CircularSeekBar
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        app:circle_x_radius="17.5dp"
-        app:circle_y_radius="17.5dp"
-        app:use_custom_radii="true"
-        app:progress="25"
-        app:max="100"
-        app:pointer_alpha_ontouch="100"
-        app:pointer_color="#ffffff"
-        app:pointer_halo_color="#2fffffff"
-        app:circle_color="#5e6e74"
-        app:circle_progress_color="#fff"
-        app:pointer_halo_width="1.5dp"
-        app:pointer_radius="3dp"
-        app:circle_stroke_width="1dp"
-        app:pointer_halo_border_width="0dp"
+    <!--<TextView-->
+        <!--android:id="@+id/myTextView"-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:ellipsize="marquee"-->
+        <!--android:focusable="true"-->
+        <!--android:marqueeRepeatLimit="marquee_forever"-->
+        <!--android:singleLine="true"-->
+        <!--android:text="文本区域"-->
+        <!--android:textColor="@android:color/black"-->
+        <!--android:focusableInTouchMode="true"-->
+        <!--&gt;-->
+    <!--</TextView>-->
+
+    <TextView
+        android:id="@+id/tv_music_name"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="20dp"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"
+        android:text="无播放歌曲66666666666666666666666666666"
+        android:focusableInTouchMode="true"
         />
+
+    <!--<com.edu.feicui.starskymusic.view.CircularSeekBar-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="200dp"-->
+        <!--app:circle_color="#7a8ca3"-->
+        <!--app:circle_progress_color="#2c3f58"-->
+        <!--app:circle_stroke_width="5dp"-->
+        <!--app:circle_x_radius="100dp"-->
+        <!--app:circle_y_radius="100dp"-->
+        <!--app:max="100"-->
+        <!--app:pointer_alpha_ontouch="100"-->
+        <!--app:pointer_color="#fff"-->
+        <!--app:pointer_halo_border_width="0dp"-->
+        <!--app:pointer_halo_color="#2fffffff"-->
+        <!--app:pointer_halo_width="2dp"-->
+        <!--app:pointer_radius="7dp"-->
+        <!--app:progress="25"-->
+        <!--app:start_angle="-65.0"-->
+        <!--app:end_angle="245.0"-->
+        <!--app:use_custom_radii="true"-->
+        <!--/>-->
 
 </LinearLayout>
